--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=7.4",
-        "composer-plugin-api": "^2.0.0"
+	"composer-plugin-api": "^1.1.0 || ^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
