--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Phel\\Composer\\": "tests"
+            "PhelTest\\Composer\\": "tests"
         }
     },
     "scripts": {
