Update php_cs, the same as phel-lang

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-composer.phar
-vendor
-data
-.phpunit.result.cache
-.php_cs.cache
 .idea/
+data/
+vendor/
+.php-cs-fixer.cache
+.phpunit.result.cache
+composer.phar
